Coverity analysis defect 121257: Uninitialized scalar field

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Server Serverless 2022-01-24
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/repl/tenant_migration_recipient_service.h:581: UNINIT_CTOR 121257 Class member declaration for "_backupCursorId".
      /src/mongo/db/repl/tenant_migration_recipient_service.cpp:385: UNINIT_CTOR 121257 Non-static class member "_backupCursorId" is not initialized in this constructor nor in any functions that it calls.

              Assignee:
              Christopher Caplinger
              Reporter:
              Coverity Collector User
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: