SERVER-62167: Initialize _donorFilenameBackupCursorId to 0